// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders 1`] = `
<Pill
  id={1}
  label="mountain climbing"
>
  <div
    data-for="pill-remove"
    data-styleName="styles.pill"
    data-tip="Click to Remove"
    onClick={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      data-styleName="styles.display-label"
    >
      mountain climbing
    </span>
  </div>
</Pill>
`;

exports[`Pill renders when editable 1`] = `
<Pill
  editable={true}
  id={1}
  label="mountain climbing"
>
  <div
    data-for="pill-remove"
    data-styleName="styles.pill"
    data-tip="Click to Remove"
    onClick={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      data-styleName="styles.display-label"
    >
      mountain climbing
    </span>
    <Icon
      data-styleName="styles.remove-label"
      name="Ex"
    >
      <span
        className="icon-Ex"
        data-styleName="icon"
      />
    </Icon>
  </div>
</Pill>
`;

exports[`Pillbox renders 1`] = `
<div
  data-styleName="styles.root"
>
  <div
    data-styleName="styles.pill-container"
  >
    <ReactCSSTransitionGroup
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={400}
      transitionLeave={true}
      transitionLeaveTimeout={300}
      transitionName={
        Object {
          "enter": undefined,
          "enterActive": undefined,
          "leave": undefined,
          "leaveActive": undefined,
        }
      }
    >
      <Pill
        id={1}
        label="clickable"
        onClick={[Function]}
      />
      <Pill
        id={2}
        label="unclickable"
      />
    </ReactCSSTransitionGroup>
  </div>
  <ReactTooltip
    delayShow={500}
    disable={true}
    effect="solid"
    id="pill-remove"
    insecure={true}
    place="top"
    resizeHide={true}
    type="dark"
    wrapper="div"
  />
</div>
`;
